# special-days

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MAINTENANCE.md  Makefile  README.md  SECURITY.md  pyproject.toml  review-communication.md  review-concept.md  review-development.md  review-implementation.md
.github/: dependabot.yml
.github/workflows/: ci.yml  live-tests.yml  refresh-snapshots.yml  release.yml
docs/: how_it_works-developer.html  how_it_works.md  v0.3-changes.html
examples/: by_date.py  future_super_bowls.py
scripts/: annotate_refresh.py  build_oscars_snapshot.py  build_snapshot.py  build_super_bowl_snapshot.py
src/special_days/: __init__.py  _cache.py  _event.py  _lazy.py  _numerals.py  _wikidata.py  event.py  lazy.py  oscars.py  super_bowl.py  wikidata.py
src/special_days/data/: oscars.json  super_bowl.json
tests/: test_cache.py  test_collection.py  test_live_wikidata.py  test_oscars.py  test_super_bowl.py  test_wikidata.py
