[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "special-days"
version = "0.3.0"
description = "Drop-in `holidays`-compatible lookup of special-event dates (Super Bowl, Oscars, ...). Data sourced from Wikidata; offline-only at runtime."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mike Stringer", email = "mike.stringer.internet@gmail.com" }]
keywords = [
    "super bowl",
    "oscars",
    "academy awards",
    "events",
    "wikidata",
    "calendar",
    "holidays",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
# Zero runtime dependencies: only the standard library. Anything we add
# here is something we promise to keep working for the life of the package.
dependencies = []

[project.optional-dependencies]
# Dev-only tooling. Not pulled in by `pip install special-days`.
dev = ["pre-commit", "mypy"]

[project.urls]
Homepage = "https://github.com/stringertheory/special-days"
Documentation = "https://github.com/stringertheory/special-days/blob/main/docs/how_it_works.md"
Source = "https://github.com/stringertheory/special-days"
Changelog = "https://github.com/stringertheory/special-days/blob/main/CHANGELOG.md"
Tracker = "https://github.com/stringertheory/special-days/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
special_days = ["data/*.json", "py.typed"]

[tool.ruff]
line-length = 80
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/special_days"]
